feat: switch to eslint-plugin-n

--- a/knip.jsonc
+++ b/knip.jsonc
@@ -12,7 +12,7 @@
     "eslint-plugin-import",
     "eslint-plugin-jsdoc",
     "eslint-plugin-markdown",
-    "eslint-plugin-node",
+    "eslint-plugin-n",
     "eslint-plugin-optimize-regex",
     "eslint-plugin-promise",
     "eslint-plugin-sonarjs",
