--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsdoc": "40.0.3",
     "eslint-plugin-markdown": "3.0.0",
-    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-n": "15.7.0",
     "eslint-plugin-optimize-regex": "1.2.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "6.1.1",
@@ -128,13 +128,13 @@
     "eslint-plugin-import": "*",
     "eslint-plugin-jsdoc": "*",
     "eslint-plugin-markdown": "*",
-    "eslint-plugin-node": "*",
+    "eslint-plugin-n": "*",
     "eslint-plugin-optimize-regex": "*",
     "eslint-plugin-promise": "*",
     "eslint-plugin-sonarjs": "*",
     "eslint-plugin-unicorn": "*"
   },
-  "packageManager": "pnpm@7.29.0",
+  "packageManager": "pnpm@8.0.0",
   "engines": {
     "node": ">=18.12.1"
   }
