--- a/package.json
+++ b/package.json
@@ -67,56 +67,56 @@
     "deepmerge-ts": "^5.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "17.4.4",
+    "@commitlint/cli": "17.5.1",
     "@commitlint/config-conventional": "17.4.4",
     "@cspell/dict-cryptocurrencies": "3.0.1",
     "@rollup/plugin-commonjs": "24.0.1",
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-typescript": "11.0.0",
-    "@semantic-release/changelog": "6.0.2",
+    "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "9.0.2",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "8.0.7",
-    "@semantic-release/npm": "9.0.2",
+    "@semantic-release/npm": "10.0.2",
     "@semantic-release/release-notes-generator": "10.0.3",
-    "@types/eslint": "8.21.2",
+    "@types/eslint": "8.37.0",
     "@types/eslint-config-prettier": "^6.11.0",
     "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/node": "18.15.3",
+    "@types/node": "18.15.11",
     "@types/rollup-plugin-auto-external": "2.0.2",
-    "@typescript-eslint/eslint-plugin": "5.55.0",
-    "@typescript-eslint/parser": "5.55.0",
+    "@typescript-eslint/eslint-plugin": "5.57.0",
+    "@typescript-eslint/parser": "5.57.0",
     "commitizen": "4.3.0",
-    "cspell": "6.30.0",
+    "cspell": "6.31.1",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "8.36.0",
-    "eslint-config-prettier": "8.7.0",
-    "eslint-import-resolver-typescript": "3.5.3",
+    "eslint": "8.37.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-import-resolver-typescript": "3.5.4",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-functional": "5.0.6",
+    "eslint-plugin-functional": "5.0.7",
     "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsdoc": "40.0.3",
+    "eslint-plugin-jsdoc": "40.1.1",
     "eslint-plugin-markdown": "3.0.0",
     "eslint-plugin-n": "15.7.0",
     "eslint-plugin-optimize-regex": "1.2.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-sonarjs": "0.18.0",
+    "eslint-plugin-sonarjs": "0.19.0",
     "eslint-plugin-unicorn": "46.0.0",
     "husky": "8.0.3",
-    "knip": "2.0.0-beta.0",
+    "knip": "2.4.0",
     "lint-staged": "13.2.0",
     "markdownlint-cli": "0.33.0",
-    "prettier": "2.8.4",
+    "prettier": "2.8.7",
     "prettier-plugin-packagejson": "2.4.3",
-    "rimraf": "4.4.0",
-    "rollup": "3.19.1",
+    "rimraf": "4.4.1",
+    "rollup": "3.20.2",
     "rollup-plugin-auto-external": "2.0.0",
-    "semantic-release": "20.1.3",
+    "semantic-release": "21.0.0",
     "ts-node": "10.9.1",
-    "tsconfig-paths": "4.1.2",
+    "tsconfig-paths": "4.2.0",
     "tslib": "2.5.0",
-    "typescript": "5.0.2"
+    "typescript": "5.0.3"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "*",
