--- a/package.json
+++ b/package.json
@@ -61,66 +61,66 @@
     "prepare": "husky install",
     "release": "semantic-release",
     "test": "echo no tests",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
     "deepmerge-ts": "^5.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "17.6.5",
-    "@commitlint/config-conventional": "17.6.5",
+    "@commitlint/cli": "17.6.6",
+    "@commitlint/config-conventional": "17.6.6",
     "@cspell/dict-cryptocurrencies": "3.0.1",
-    "@rollup/plugin-commonjs": "25.0.1",
+    "@rollup/plugin-commonjs": "25.0.2",
     "@rollup/plugin-node-resolve": "15.1.0",
-    "@rollup/plugin-typescript": "11.1.1",
+    "@rollup/plugin-typescript": "11.1.2",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "10.0.1",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "9.0.3",
     "@semantic-release/npm": "10.0.4",
-    "@semantic-release/release-notes-generator": "11.0.3",
-    "@types/eslint": "8.40.2",
+    "@semantic-release/release-notes-generator": "11.0.4",
+    "@types/eslint": "8.44.0",
     "@types/eslint-config-prettier": "6.11.0",
     "@types/eslint-plugin-prettier": "3.1.0",
-    "@types/node": "20.3.1",
+    "@types/node": "18.11.9",
     "@types/rollup-plugin-auto-external": "2.0.2",
-    "@typescript-eslint/eslint-plugin": "5.59.11",
-    "@typescript-eslint/parser": "5.59.11",
+    "@typescript-eslint/eslint-plugin": "6.0.0",
+    "@typescript-eslint/parser": "6.0.0",
     "commitizen": "4.3.0",
     "cspell": "6.31.1",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "8.42.0",
+    "eslint": "8.45.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-import-resolver-typescript": "3.5.5",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-functional": "5.0.8",
     "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsdoc": "46.2.6",
+    "eslint-plugin-jsdoc": "46.4.3",
     "eslint-plugin-markdown": "3.0.0",
-    "eslint-plugin-n": "16.0.0",
+    "eslint-plugin-n": "16.0.1",
     "eslint-plugin-optimize-regex": "1.2.1",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-sonarjs": "0.19.0",
     "eslint-plugin-unicorn": "47.0.0",
     "husky": "8.0.3",
-    "knip": "2.13.0",
-    "lint-staged": "13.2.2",
-    "markdownlint-cli": "0.34.0",
-    "prettier": "2.8.8",
-    "prettier-plugin-packagejson": "2.4.3",
+    "knip": "2.15.5",
+    "lint-staged": "13.2.3",
+    "markdownlint-cli": "0.35.0",
+    "prettier": "3.0.0",
+    "prettier-plugin-packagejson": "2.4.5",
     "rimraf": "5.0.1",
-    "rollup": "3.25.1",
+    "rollup": "3.26.2",
     "rollup-plugin-auto-external": "2.0.0",
-    "semantic-release": "21.0.5",
+    "semantic-release": "21.0.7",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
-    "tslib": "2.5.3",
-    "typescript": "5.1.3"
+    "tslib": "2.6.0",
+    "typescript": "5.1.6"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "*",
-    "@typescript-eslint/parser": "*",
+    "@typescript-eslint/eslint-plugin": ">=6.0.0",
+    "@typescript-eslint/parser": ">=6.0.0",
     "eslint": ">=8.24.0",
     "eslint-import-resolver-typescript": "*",
     "eslint-plugin-eslint-comments": "*",
