feat: migrate to eslint 9 and add more plugins
BREAKING CHANGE: ESLint 9 is now required

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,3 @@
+issuehunt: RebeccaStevens/eslint-config-rebeccastevens
 ko_fi: rebeccastevens
 custom: https://github.com/RebeccaStevens/eslint-config-rebeccastevens/blob/main/DONATIONS.md
