--- a/knip.jsonc
+++ b/knip.jsonc
@@ -1,21 +1,43 @@
 {
   "$schema": "node_modules/knip/schema-jsonc.json",
-  "entry": ["src/configs/*.ts!"],
-  "project": ["src/**/*.ts!"],
+  "entry": ["src/index.ts!", "tests/**/*.test.ts"],
+  "project": ["src/**/*.ts!", "tests/**/*.ts"],
   "ignoreDependencies": [
+    "@stylistic/eslint-plugin",
     "@typescript-eslint/eslint-plugin",
     "@typescript-eslint/parser",
-    "eslint",
+    "@typescript-eslint/utils",
+    "@unocss/eslint-plugin",
+    "eslint-config-prettier",
+    "eslint-flat-config-utils",
     "eslint-import-resolver-typescript",
+    "eslint-merge-processors",
     "eslint-plugin-eslint-comments",
+    "eslint-plugin-format",
     "eslint-plugin-functional",
     "eslint-plugin-import",
     "eslint-plugin-jsdoc",
+    "eslint-plugin-jsonc",
     "eslint-plugin-markdown",
     "eslint-plugin-n",
+    "eslint-plugin-no-only-tests",
     "eslint-plugin-optimize-regex",
+    "eslint-plugin-perfectionist",
+    "eslint-plugin-prettier",
     "eslint-plugin-promise",
     "eslint-plugin-sonarjs",
+    "eslint-plugin-toml",
     "eslint-plugin-unicorn",
+    "eslint-plugin-vitest",
+    "eslint-plugin-vue",
+    "eslint-plugin-yml",
+    "eslint-processor-vue-blocks",
+    "jsonc-eslint-parser",
+    "prettier-plugin-multiline-arrays",
+    "prettier-plugin-packagejson",
+    "prettier",
+    "toml-eslint-parser",
+    "vue-eslint-parser",
+    "yaml-eslint-parser",
   ],
 }
