--- a/.github/workflows/lint-knip-dev.yml
+++ b/.github/workflows/lint-knip-dev.yml
@@ -9,6 +9,7 @@ jobs:
   lint_knip_dev:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: ./.github/actions/prepare
+      - run: pnpm run typegen
       - run: pnpm run lint:knip:development
