--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,7 +1,15 @@
-"$schema": http://json.schemastore.org/prettierrc
+$schema: http://json.schemastore.org/prettierrc
 
 plugins:
   - prettier-plugin-packagejson
+  - prettier-plugin-multiline-arrays
 
-embeddedLanguageFormatting: "off"
-quoteProps: "consistent"
+trailingComma: all
+
+overrides:
+  - files: "*.md"
+    options:
+      embeddedLanguageFormatting: off
+  - files: .nvmrc
+    options:
+      parser: yaml
