--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,26 +10,25 @@
     "importHelpers": false,
     "lib": ["ESNext"],
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "newLine": "LF",
     "noEmitOnError": true,
+    "noErrorTruncation": true,
     "noImplicitReturns": true,
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
+    "preserveConstEnums": true,
     "pretty": true,
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "sourceMap": false,
     "strict": true,
-    "target": "ES2020",
-    "baseUrl": "./src",
-    "paths": {
-      "~": ["."],
-      "~/*": ["./common/*"],
-      "~/builtin": ["./builtin"],
-      "~/configs/*": ["./configs/*"],
-      "~/plugins/*": ["./plugins/*"]
-    }
-  }
+    "target": "ESNext",
+    "useUnknownInCatchVariables": true,
+    "baseUrl": ".",
+    "paths": {}
+  },
+  "exclude": ["dist/"]
 }
