--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "rootDir": "./src"
+    "rootDir": "src",
+    "declaration": true
   },
   "include": ["src"]
 }
