--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "type": "module",
   "exports": {
-    "import": {
-      "types": "./dist/index.d.mts",
-      "default": "./dist/index.mjs"
-    }
+    "types": {
+      "require": "./dist/index.d.cts",
+      "import": "./dist/index.d.mts"
+    },
+    "require": "./dist/index.cjs",
+    "import": "./dist/index.mjs"
   },
   "files": [
     "dist/",
