--- a/.lintstagedrc.yml
+++ b/.lintstagedrc.yml
@@ -1,15 +1,14 @@
 "*.{json,yml}":
-  - prettier --ignore-unknown --write
+  - eslint --fix
   - cspell lint --no-progress --show-suggestions --show-context --no-must-find-files --dot
 
 "*.ts":
-  - prettier --ignore-unknown --write
   - eslint --fix
   - cspell lint --no-progress --show-suggestions --show-context --no-must-find-files --dot
   - tsc-files -p tsconfig.build.json --noEmit
 
 "*.md":
-  - prettier --ignore-unknown --write
+  - eslint --fix
   - markdownlint --config=.markdownlint.json --ignore-path=.markdownlintignore
   - cspell lint --no-progress --show-suggestions --show-context --no-must-find-files --dot
 
