--- a/knip.jsonc
+++ b/knip.jsonc
@@ -10,21 +10,20 @@
     "@unocss/eslint-plugin",
     "eslint-config-prettier",
     "eslint-flat-config-utils",
-    "eslint-import-resolver-typescript",
     "eslint-merge-processors",
     "eslint-plugin-eslint-comments",
     "eslint-plugin-format",
     "eslint-plugin-functional",
-    "eslint-plugin-import",
+    "eslint-plugin-import-x",
     "eslint-plugin-jsdoc",
     "eslint-plugin-jsonc",
     "eslint-plugin-markdown",
     "eslint-plugin-n",
     "eslint-plugin-no-only-tests",
     "eslint-plugin-optimize-regex",
-    "eslint-plugin-perfectionist",
     "eslint-plugin-prettier",
     "eslint-plugin-promise",
+    "eslint-plugin-regexp",
     "eslint-plugin-sonarjs",
     "eslint-plugin-toml",
     "eslint-plugin-unicorn",
