--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,7 @@
     "source.fixAll.eslint": "explicit"
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
-  "editor.formatOnSaveMode": "file",
+  "editor.formatOnSave": false,
   "editor.rulers": [80],
   "eslint.probe": [
     "html",
@@ -36,6 +35,6 @@
   },
   "typescript.tsdk": "./node_modules/typescript/lib",
   "[markdown]": {
-    "editor.rulers": [160]
+    "editor.rulers": [120]
   }
 }
