--- a/knip.jsonc
+++ b/knip.jsonc
@@ -10,6 +10,7 @@
     "@unocss/eslint-plugin",
     "eslint-config-prettier",
     "eslint-flat-config-utils",
+    "eslint-import-resolver-typescript",
     "eslint-merge-processors",
     "eslint-plugin-eslint-comments",
     "eslint-plugin-format",
