--- a/package.json
+++ b/package.json
@@ -54,77 +54,78 @@
     "typegen": "tsx scripts/typegen.ts"
   },
   "dependencies": {
-    "@antfu/install-pkg": "0.3.1",
+    "@antfu/install-pkg": "0.3.2",
     "@clack/prompts": "0.7.0",
     "globals": "15.0.0",
     "local-pkg": "0.5.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "19.2.1",
-    "@commitlint/config-conventional": "19.1.0",
+    "@commitlint/cli": "19.2.2",
+    "@commitlint/config-conventional": "19.2.2",
     "@cspell/dict-cryptocurrencies": "5.0.0",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "12.0.0",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "10.0.2",
+    "@semantic-release/github": "10.0.3",
     "@semantic-release/npm": "12.0.0",
     "@semantic-release/release-notes-generator": "13.0.0",
     "@stylistic/eslint-plugin": "1.7.0",
     "@stylistic/eslint-plugin-migrate": "1.7.0",
-    "@types/node": "20.11.30",
+    "@types/node": "20.12.7",
     "@types/rollup-plugin-auto-external": "2.0.5",
-    "@typescript-eslint/eslint-plugin": "7.4.0",
-    "@typescript-eslint/parser": "7.4.0",
-    "@typescript-eslint/utils": "7.4.0",
-    "@unocss/eslint-plugin": "0.58.7",
+    "@typescript-eslint/eslint-plugin": "7.6.0",
+    "@typescript-eslint/parser": "7.6.0",
+    "@typescript-eslint/utils": "7.6.0",
+    "@unocss/eslint-plugin": "0.59.2",
     "commitizen": "4.3.0",
-    "cspell": "8.6.1",
+    "cspell": "8.7.0",
     "cz-conventional-changelog": "3.3.0",
     "deassert": "1.0.2",
-    "eslint": "9.0.0-rc.0",
+    "eslint": "9.0.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-flat-config-utils": "0.1.0",
+    "eslint-flat-config-utils": "0.2.2",
+    "eslint-import-resolver-typescript": "3.6.1",
     "eslint-merge-processors": "0.1.0",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-format": "0.1.0",
-    "eslint-plugin-functional": "6.3.0",
+    "eslint-plugin-functional": "7.0.0-alpha.0",
     "eslint-plugin-import-x": "0.5.0",
-    "eslint-plugin-jsdoc": "48.2.1",
-    "eslint-plugin-jsonc": "2.14.1",
+    "eslint-plugin-jsdoc": "48.2.3",
+    "eslint-plugin-jsonc": "2.15.1",
     "eslint-plugin-markdown": "4.0.1",
-    "eslint-plugin-n": "16.6.2",
+    "eslint-plugin-n": "17.2.1",
     "eslint-plugin-no-only-tests": "3.1.0",
     "eslint-plugin-optimize-regex": "1.2.1",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-regexp": "2.4.0",
-    "eslint-plugin-sonarjs": "0.24.0",
-    "eslint-plugin-toml": "0.10.0",
-    "eslint-plugin-unicorn": "51.0.1",
-    "eslint-plugin-vitest": "0.4.0",
-    "eslint-plugin-vue": "9.24.0",
-    "eslint-plugin-yml": "1.13.2",
+    "eslint-plugin-regexp": "2.5.0",
+    "eslint-plugin-sonarjs": "0.25.1",
+    "eslint-plugin-toml": "0.11.0",
+    "eslint-plugin-unicorn": "52.0.0",
+    "eslint-plugin-vitest": "0.5.3",
+    "eslint-plugin-vue": "9.25.0",
+    "eslint-plugin-yml": "1.14.0",
     "eslint-processor-vue-blocks": "0.1.1",
-    "eslint-typegen": "0.1.3",
+    "eslint-typegen": "0.2.2",
     "husky": "9.0.11",
     "jiti": "1.21.0",
     "jsonc-eslint-parser": "2.4.0",
-    "knip": "5.6.1",
+    "knip": "5.9.4",
     "lint-staged": "15.2.2",
     "markdownlint": "0.34.0",
     "markdownlint-cli": "0.39.0",
     "prettier": "3.2.5",
     "prettier-plugin-multiline-arrays": "3.0.4",
-    "prettier-plugin-packagejson": "2.4.12",
+    "prettier-plugin-packagejson": "2.5.0",
     "rimraf": "5.0.5",
-    "rollup": "4.13.1",
+    "rollup": "4.14.3",
     "rollup-plugin-auto-external": "2.0.0",
     "rollup-plugin-ts": "3.4.5",
-    "semantic-release": "23.0.6",
+    "semantic-release": "23.0.8",
     "toml-eslint-parser": "0.9.3",
     "tsc-files": "1.1.4",
-    "tsx": "4.7.1",
-    "typescript": "5.4.3",
+    "tsx": "4.7.2",
+    "typescript": "5.4.5",
     "vue-eslint-parser": "9.4.2",
     "yaml-eslint-parser": "1.2.2"
   },
@@ -137,6 +138,7 @@
     "eslint": "*",
     "eslint-config-prettier": "*",
     "eslint-flat-config-utils": "*",
+    "eslint-import-resolver-typescript": "*",
     "eslint-merge-processors": "*",
     "eslint-plugin-eslint-comments": "*",
     "eslint-plugin-format": "*",
@@ -186,6 +188,9 @@
       "optional": true
     },
     "eslint-flat-config-utils": {
+      "optional": true
+    },
+    "eslint-import-resolver-typescript": {
       "optional": true
     },
     "eslint-merge-processors": {
