--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "@rebeccastevens/eslint-config",
   "version": "0.0.0-development",
   "description": "My ESLint shareable config.",
-  "keywords": [
-    "eslint config"
-  ],
+  "keywords": ["eslint config"],
   "homepage": "https://github.com/RebeccaStevens/eslint-config-rebeccastevens#readme",
   "bugs": {
     "url": "https://github.com/RebeccaStevens/eslint-config-rebeccastevens/issues"
@@ -27,11 +25,7 @@
     "require": "./dist/index.cjs",
     "import": "./dist/index.mjs"
   },
-  "files": [
-    "dist/",
-    "package.json",
-    "LICENSE"
-  ],
+  "files": ["dist/", "package.json", "LICENSE"],
   "scripts": {
     "build": "pnpm run build:node",
     "build:node": "rimraf dist && pnpm run typegen && rollup -c rollup.config.ts --configPlugin rollup-plugin-ts",
@@ -114,7 +108,6 @@
     "markdownlint": "0.34.0",
     "markdownlint-cli": "0.39.0",
     "prettier": "3.2.5",
-    "prettier-plugin-multiline-arrays": "3.0.4",
     "prettier-plugin-packagejson": "2.5.0",
     "rimraf": "5.0.5",
     "rollup": "4.14.3",
@@ -161,7 +154,6 @@
     "eslint-processor-vue-blocks": "*",
     "jsonc-eslint-parser": "*",
     "prettier": "*",
-    "prettier-plugin-multiline-arrays": "*",
     "prettier-plugin-packagejson": "*",
     "toml-eslint-parser": "*",
     "vue-eslint-parser": "*",
@@ -259,9 +251,6 @@
       "optional": true
     },
     "prettier": {
-      "optional": true
-    },
-    "prettier-plugin-multiline-arrays": {
       "optional": true
     },
     "prettier-plugin-packagejson": {
