--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "build": "pnpm run build:node",
     "build:node": "rimraf dist && pnpm run typegen && rollup -c rollup.config.ts --configPlugin rollup-plugin-ts",
     "cz": "git-cz",
-    "lint": "pnpm run typegen && pnpm run lint:js && pnpm run lint:md && pnpm run lint:knip && pnpm run lint:spelling && pnpm run lint:packages",
-    "lint-fix": "pnpm run typegen && pnpm run lint:js-fix && pnpm run lint:packages-fix",
-    "lint:js": "eslint .",
-    "lint:js-fix": "eslint . --fix",
+    "lint": "pnpm run typegen && pnpm run lint:eslint && pnpm run lint:md && pnpm run lint:knip && pnpm run lint:spelling && pnpm run lint:packages",
+    "lint-fix": "pnpm run typegen && pnpm run lint:eslint-fix && pnpm run lint:packages-fix",
+    "lint:eslint": "eslint .",
+    "lint:eslint-fix": "eslint . --fix",
     "lint:knip": "pnpm run lint:knip:development && pnpm run lint:knip:production",
     "lint:knip:development": "knip --exclude exports,nsExports,types,nsTypes",
     "lint:knip:production": "knip --production --strict --exclude exports,nsExports,types,nsTypes",
