--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,8 +16,8 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  lint_js:
-    uses: ./.github/workflows/lint-js.yml
+  lint_eslint:
+    uses: ./.github/workflows/lint-eslint.yml
   lint_knip_dev:
     uses: ./.github/workflows/lint-knip-dev.yml
   lint_knip_prod:
@@ -33,7 +33,7 @@ jobs:
 
   release:
     needs:
-      - lint_js
+      - lint_eslint
       - lint_knip_dev
       - lint_knip_prod
       - lint_markdown
