--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     "typegen": "tsx scripts/typegen.ts"
   },
   "dependencies": {
-    "@antfu/install-pkg": "0.3.3",
-    "@clack/prompts": "0.7.0",
-    "eslint-flat-config-utils": "0.2.5",
-    "eslint-merge-processors": "0.1.0",
-    "globals": "15.2.0",
-    "local-pkg": "0.5.0"
+    "@antfu/install-pkg": "^0.3.3",
+    "@clack/prompts": "^0.7.0",
+    "eslint-flat-config-utils": "^0.2.5",
+    "eslint-merge-processors": "^0.1.0",
+    "globals": "^15.3.0",
+    "local-pkg": "^0.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "19.3.0",
@@ -62,18 +62,18 @@
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "12.0.0",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "10.0.4",
+    "@semantic-release/github": "10.0.5",
     "@semantic-release/npm": "12.0.1",
     "@semantic-release/release-notes-generator": "13.0.0",
     "@stylistic/eslint-plugin": "2.1.0",
     "@stylistic/eslint-plugin-migrate": "2.1.0",
     "@types/node": "20.12.12",
-    "@typescript-eslint/eslint-plugin": "7.9.0",
-    "@typescript-eslint/parser": "7.9.0",
-    "@typescript-eslint/utils": "7.9.0",
-    "@unocss/eslint-plugin": "0.60.2",
+    "@typescript-eslint/eslint-plugin": "7.10.0",
+    "@typescript-eslint/parser": "7.10.0",
+    "@typescript-eslint/utils": "7.10.0",
+    "@unocss/eslint-plugin": "0.60.3",
     "commitizen": "4.3.0",
-    "cspell": "8.8.1",
+    "cspell": "8.8.3",
     "cz-conventional-changelog": "3.3.0",
     "deassert": "1.0.2",
     "eslint": "9.3.0",
@@ -83,15 +83,15 @@
     "eslint-plugin-format": "0.1.1",
     "eslint-plugin-functional": "7.0.0-alpha.5",
     "eslint-plugin-import-x": "0.5.0",
-    "eslint-plugin-jsdoc": "48.2.5",
-    "eslint-plugin-jsonc": "2.15.1",
+    "eslint-plugin-jsdoc": "48.2.6",
+    "eslint-plugin-jsonc": "2.16.0",
     "eslint-plugin-markdown": "5.0.0",
     "eslint-plugin-n": "17.7.0",
     "eslint-plugin-no-only-tests": "3.1.0",
     "eslint-plugin-optimize-regex": "1.2.1",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-regexp": "2.5.0",
+    "eslint-plugin-regexp": "2.6.0",
     "eslint-plugin-sonarjs": "1.0.3",
     "eslint-plugin-toml": "0.11.0",
     "eslint-plugin-unicorn": "53.0.0",
@@ -104,21 +104,21 @@
     "jiti": "1.21.0",
     "jsonc-eslint-parser": "2.4.0",
     "knip": "5.16.0",
-    "lint-staged": "15.2.2",
+    "lint-staged": "15.2.4",
     "markdownlint": "0.34.0",
     "markdownlint-cli": "0.40.0",
     "prettier": "3.2.5",
     "prettier-plugin-packagejson": "2.5.0",
     "rimraf": "5.0.7",
-    "rollup": "4.17.2",
+    "rollup": "4.18.0",
     "rollup-plugin-ts": "3.4.5",
     "semantic-release": "23.1.1",
     "toml-eslint-parser": "0.9.3",
     "tsc-files": "1.1.4",
-    "tsx": "4.10.5",
+    "tsx": "4.11.0",
     "typescript": "5.4.5",
     "vue-eslint-parser": "9.4.2",
-    "yaml-eslint-parser": "1.2.2"
+    "yaml-eslint-parser": "1.2.3"
   },
   "peerDependencies": {
     "@stylistic/eslint-plugin": "*",
