--- a/package.json
+++ b/package.json
@@ -51,46 +51,46 @@
     "@clack/prompts": "^0.7.0",
     "eslint-flat-config-utils": "^0.2.5",
     "eslint-merge-processors": "^0.1.0",
-    "globals": "^15.3.0",
+    "globals": "^15.4.0",
     "local-pkg": "^0.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
     "@cspell/dict-cryptocurrencies": "5.0.0",
-    "@intlify/eslint-plugin-vue-i18n": "2.0.0",
+    "@intlify/eslint-plugin-vue-i18n": "3.0.0",
     "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/commit-analyzer": "12.0.0",
+    "@semantic-release/commit-analyzer": "13.0.0",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "10.0.5",
+    "@semantic-release/github": "10.0.6",
     "@semantic-release/npm": "12.0.1",
-    "@semantic-release/release-notes-generator": "13.0.0",
+    "@semantic-release/release-notes-generator": "14.0.0",
     "@stylistic/eslint-plugin": "2.1.0",
     "@stylistic/eslint-plugin-migrate": "2.1.0",
-    "@types/node": "20.12.12",
-    "@typescript-eslint/eslint-plugin": "7.10.0",
-    "@typescript-eslint/parser": "7.10.0",
-    "@typescript-eslint/utils": "7.10.0",
-    "@unocss/eslint-plugin": "0.60.3",
+    "@types/node": "20.14.2",
+    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.29",
+    "@typescript-eslint/parser": "8.0.0-alpha.29",
+    "@typescript-eslint/utils": "8.0.0-alpha.29",
+    "@unocss/eslint-plugin": "0.60.4",
     "commitizen": "4.3.0",
-    "cspell": "8.8.3",
+    "cspell": "8.8.4",
     "cz-conventional-changelog": "3.3.0",
     "deassert": "1.0.2",
-    "eslint": "9.3.0",
+    "eslint": "9.4.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-format": "0.1.1",
-    "eslint-plugin-functional": "7.0.0-alpha.6",
-    "eslint-plugin-import-x": "0.5.0",
-    "eslint-plugin-jsdoc": "48.2.6",
+    "eslint-plugin-functional": "7.0.0-alpha.8",
+    "eslint-plugin-import-x": "0.5.1",
+    "eslint-plugin-jsdoc": "48.2.9",
     "eslint-plugin-jsonc": "2.16.0",
     "eslint-plugin-markdown": "5.0.0",
-    "eslint-plugin-n": "17.7.0",
+    "eslint-plugin-n": "17.8.1",
     "eslint-plugin-no-only-tests": "3.1.0",
     "eslint-plugin-optimize-regex": "1.2.1",
     "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-promise": "6.2.0",
     "eslint-plugin-regexp": "2.6.0",
     "eslint-plugin-sonarjs": "1.0.3",
     "eslint-plugin-toml": "0.11.0",
@@ -101,23 +101,23 @@
     "eslint-processor-vue-blocks": "0.1.2",
     "eslint-typegen": "0.2.4",
     "husky": "9.0.11",
-    "jiti": "1.21.0",
+    "jiti": "1.21.3",
     "jsonc-eslint-parser": "2.4.0",
-    "knip": "5.16.0",
+    "knip": "5.18.2",
     "lint-staged": "15.2.5",
     "markdownlint": "0.34.0",
-    "markdownlint-cli": "0.40.0",
-    "prettier": "3.2.5",
+    "markdownlint-cli": "0.41.0",
+    "prettier": "3.3.1",
     "prettier-plugin-packagejson": "2.5.0",
     "rimraf": "5.0.7",
     "rollup": "4.18.0",
     "rollup-plugin-ts": "3.4.5",
-    "semantic-release": "23.1.1",
+    "semantic-release": "24.0.0",
     "toml-eslint-parser": "0.9.3",
     "tsc-files": "1.1.4",
-    "tsx": "4.11.0",
+    "tsx": "4.15.1",
     "typescript": "5.4.5",
-    "vue-eslint-parser": "9.4.2",
+    "vue-eslint-parser": "9.4.3",
     "yaml-eslint-parser": "1.2.3"
   },
   "peerDependencies": {
