--- a/knip.jsonc
+++ b/knip.jsonc
@@ -37,6 +37,7 @@
     "prettier-plugin-packagejson",
     "prettier",
     "toml-eslint-parser",
+    "tsc-files",
     "vue-eslint-parser",
     "yaml-eslint-parser",
   ],
