feat: more tweaks

--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "lint:spelling": "cspell \"**\" \".github/**/*\"",
     "prepare": "husky && pnpm run typegen",
     "release": "semantic-release",
-    "type-check": "pnpm run typegen && tsc --noEmit -p tsconfig.build.json",
+    "typecheck": "pnpm run typegen && tsc --noEmit -p tsconfig.build.json",
     "typegen": "tsx scripts/typegen.ts"
   },
   "dependencies": {
     "@antfu/install-pkg": "^0.3.3",
     "@clack/prompts": "^0.7.0",
-    "eslint-flat-config-utils": "^0.2.5",
+    "eslint-flat-config-utils": "^0.3.0",
     "eslint-merge-processors": "^0.1.0",
     "globals": "^15.8.0",
     "local-pkg": "^0.5.0"
@@ -62,55 +62,55 @@
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "13.0.0",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "10.1.0",
+    "@semantic-release/github": "10.1.3",
     "@semantic-release/npm": "12.0.1",
     "@semantic-release/release-notes-generator": "14.0.1",
-    "@stylistic/eslint-plugin": "2.3.0",
-    "@stylistic/eslint-plugin-migrate": "2.3.0",
-    "@types/node": "20.14.10",
-    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.41",
-    "@typescript-eslint/parser": "8.0.0-alpha.41",
-    "@typescript-eslint/utils": "8.0.0-alpha.41",
-    "@unocss/eslint-plugin": "0.61.3",
+    "@stylistic/eslint-plugin": "2.4.0",
+    "@stylistic/eslint-plugin-migrate": "2.4.0",
+    "@types/node": "22.0.0",
+    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.55",
+    "@typescript-eslint/parser": "8.0.0-alpha.55",
+    "@typescript-eslint/utils": "8.0.0-alpha.55",
+    "@unocss/eslint-plugin": "0.61.6",
     "commitizen": "4.3.0",
-    "cspell": "8.10.4",
+    "cspell": "8.12.1",
     "cz-conventional-changelog": "3.3.0",
     "deassert": "1.0.2",
-    "eslint": "9.6.0",
+    "eslint": "9.8.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-format": "0.1.2",
     "eslint-plugin-functional": "7.0.0-alpha.10",
-    "eslint-plugin-import-x": "3.0.0",
-    "eslint-plugin-jsdoc": "48.7.0",
+    "eslint-plugin-import-x": "3.1.0",
+    "eslint-plugin-jsdoc": "48.8.3",
     "eslint-plugin-jsonc": "2.16.0",
-    "eslint-plugin-markdown": "5.0.0",
-    "eslint-plugin-n": "17.9.0",
+    "eslint-plugin-markdown": "5.1.0",
+    "eslint-plugin-n": "17.10.1",
     "eslint-plugin-no-only-tests": "3.1.0",
     "eslint-plugin-optimize-regex": "1.2.1",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-promise": "6.4.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-promise": "7.0.0",
     "eslint-plugin-regexp": "2.6.0",
-    "eslint-plugin-sonarjs": "1.0.3",
+    "eslint-plugin-sonarjs": "1.0.4",
     "eslint-plugin-toml": "0.11.1",
-    "eslint-plugin-unicorn": "54.0.0",
+    "eslint-plugin-unicorn": "55.0.0",
     "eslint-plugin-vitest": "0.5.4",
     "eslint-plugin-vue": "9.27.0",
     "eslint-plugin-yml": "1.14.0",
     "eslint-processor-vue-blocks": "0.1.2",
-    "eslint-typegen": "0.2.4",
-    "husky": "9.0.11",
+    "eslint-typegen": "0.3.0",
+    "husky": "9.1.3",
     "jiti": "1.21.6",
     "jsonc-eslint-parser": "2.4.0",
-    "knip": "5.25.2",
+    "knip": "5.27.0",
     "lint-staged": "15.2.7",
     "markdownlint": "0.34.0",
     "markdownlint-cli": "0.41.0",
-    "prettier": "3.3.2",
-    "prettier-plugin-packagejson": "2.5.0",
+    "prettier": "3.3.3",
+    "prettier-plugin-packagejson": "2.5.1",
     "rimraf": "6.0.1",
-    "rollup": "4.18.1",
+    "rollup": "4.19.1",
     "rollup-plugin-ts": "3.4.5",
     "semantic-release": "24.0.0",
     "toml-eslint-parser": "0.10.0",
