--- a/package.json
+++ b/package.json
@@ -65,15 +65,15 @@
     "@semantic-release/github": "10.1.3",
     "@semantic-release/npm": "12.0.1",
     "@semantic-release/release-notes-generator": "14.0.1",
-    "@stylistic/eslint-plugin": "2.4.0",
-    "@stylistic/eslint-plugin-migrate": "2.4.0",
-    "@types/node": "22.0.0",
-    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.55",
-    "@typescript-eslint/parser": "8.0.0-alpha.55",
-    "@typescript-eslint/utils": "8.0.0-alpha.55",
-    "@unocss/eslint-plugin": "0.61.6",
+    "@stylistic/eslint-plugin": "2.6.0",
+    "@stylistic/eslint-plugin-migrate": "2.6.0",
+    "@types/node": "22.0.2",
+    "@typescript-eslint/eslint-plugin": "8.0.0",
+    "@typescript-eslint/parser": "8.0.0",
+    "@typescript-eslint/utils": "8.0.0",
+    "@unocss/eslint-plugin": "0.61.9",
     "commitizen": "4.3.0",
-    "cspell": "8.12.1",
+    "cspell": "8.13.0",
     "cz-conventional-changelog": "3.3.0",
     "deassert": "1.0.2",
     "eslint": "9.8.0",
@@ -83,7 +83,7 @@
     "eslint-plugin-format": "0.1.2",
     "eslint-plugin-functional": "7.0.0-alpha.10",
     "eslint-plugin-import-x": "3.1.0",
-    "eslint-plugin-jsdoc": "48.8.3",
+    "eslint-plugin-jsdoc": "48.10.2",
     "eslint-plugin-jsonc": "2.16.0",
     "eslint-plugin-markdown": "5.1.0",
     "eslint-plugin-n": "17.10.1",
@@ -100,7 +100,7 @@
     "eslint-plugin-yml": "1.14.0",
     "eslint-processor-vue-blocks": "0.1.2",
     "eslint-typegen": "0.3.0",
-    "husky": "9.1.3",
+    "husky": "9.1.4",
     "jiti": "1.21.6",
     "jsonc-eslint-parser": "2.4.0",
     "knip": "5.27.0",
@@ -115,7 +115,7 @@
     "semantic-release": "24.0.0",
     "toml-eslint-parser": "0.10.0",
     "tsc-files": "1.1.4",
-    "tsx": "4.16.2",
+    "tsx": "4.16.3",
     "typescript": "5.4.5",
     "vue-eslint-parser": "9.4.3",
     "yaml-eslint-parser": "1.2.3"
@@ -265,7 +265,7 @@
       "optional": true
     }
   },
-  "packageManager": "pnpm@9.1.0",
+  "packageManager": "pnpm@9.6.0",
   "engines": {
     "node": ">=20.0.0"
   }
