feat: more tweaks

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
     "@cspell/dict-cryptocurrencies": "5.0.0",
+    "@eslint/compat": "1.1.1",
     "@intlify/eslint-plugin-vue-i18n": "3.0.0",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "13.0.0",
@@ -67,6 +68,7 @@
     "@semantic-release/release-notes-generator": "14.0.1",
     "@stylistic/eslint-plugin": "2.6.1",
     "@stylistic/eslint-plugin-migrate": "2.6.1",
+    "@types/eslint": "9.6.0",
     "@types/node": "22.1.0",
     "@typescript-eslint/eslint-plugin": "8.0.0",
     "@typescript-eslint/parser": "8.0.0",
@@ -86,7 +88,7 @@
     "eslint-plugin-jsdoc": "48.11.0",
     "eslint-plugin-jsonc": "2.16.0",
     "eslint-plugin-markdown": "5.1.0",
-    "eslint-plugin-n": "17.10.1",
+    "eslint-plugin-n": "17.10.2",
     "eslint-plugin-no-only-tests": "3.1.0",
     "eslint-plugin-optimize-regex": "1.2.1",
     "eslint-plugin-prettier": "5.2.1",
@@ -104,7 +106,7 @@
     "jiti": "1.21.6",
     "jsonc-eslint-parser": "2.4.0",
     "knip": "5.27.0",
-    "lint-staged": "15.2.7",
+    "lint-staged": "15.2.8",
     "markdownlint": "0.34.0",
     "markdownlint-cli": "0.41.0",
     "prettier": "3.3.3",
