--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
     "allowJs": true,
+    "noEmit": true,
     "rootDir": "."
+    // "isolatedDeclarations": false
   },
-  "include": [".", ".*"]
+  "include": [".", ".*", "**/*", "**/.*"]
 }
