feat: add react support

--- a/knip.jsonc
+++ b/knip.jsonc
@@ -3,6 +3,7 @@
   "entry": ["src/index.ts!", "tests/**/*.test.ts"],
   "project": ["src/**/*.ts!", "tests/**/*.ts"],
   "ignoreDependencies": [
+    "@eslint-react/eslint-plugin",
     "@intlify/eslint-plugin-vue-i18n",
     "@stylistic/eslint-plugin",
     "@typescript-eslint/eslint-plugin",
@@ -16,6 +17,7 @@
     "eslint-plugin-eslint-comments",
     "eslint-plugin-format",
     "eslint-plugin-functional",
+    "eslint-plugin-i18next",
     "eslint-plugin-import-x",
     "eslint-plugin-jsdoc",
     "eslint-plugin-jsonc",
@@ -25,6 +27,8 @@
     "eslint-plugin-optimize-regex",
     "eslint-plugin-prettier",
     "eslint-plugin-promise",
+    "eslint-plugin-react-hooks",
+    "eslint-plugin-react-refresh",
     "eslint-plugin-regexp",
     "eslint-plugin-sonarjs",
     "eslint-plugin-toml",
