--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@commitlint/cli": "19.4.0",
     "@commitlint/config-conventional": "19.2.2",
     "@cspell/dict-cryptocurrencies": "5.0.0",
+    "@eslint-react/eslint-plugin": "1.9.1",
     "@eslint/compat": "1.1.1",
     "@intlify/eslint-plugin-vue-i18n": "3.0.0",
     "@semantic-release/changelog": "6.0.3",
@@ -84,6 +85,7 @@
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-format": "0.1.2",
     "eslint-plugin-functional": "7.0.0",
+    "eslint-plugin-i18next": "6.0.9",
     "eslint-plugin-import-x": "3.1.0",
     "eslint-plugin-jsdoc": "48.11.0",
     "eslint-plugin-jsonc": "2.16.0",
@@ -93,6 +95,8 @@
     "eslint-plugin-optimize-regex": "1.2.1",
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-promise": "7.0.0",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-refresh": "0.4.9",
     "eslint-plugin-regexp": "2.6.0",
     "eslint-plugin-sonarjs": "1.0.4",
     "eslint-plugin-toml": "0.11.1",
@@ -161,6 +165,9 @@
     "yaml-eslint-parser": "*"
   },
   "peerDependenciesMeta": {
+    "@eslint-react/eslint-plugin": {
+      "optional": true
+    },
     "@stylistic/eslint-plugin": {
       "optional": true
     },
@@ -197,6 +204,9 @@
     "eslint-plugin-functional": {
       "optional": true
     },
+    "eslint-plugin-i18next": {
+      "optional": true
+    },
     "eslint-plugin-import-x": {
       "optional": true
     },
@@ -222,6 +232,12 @@
       "optional": true
     },
     "eslint-plugin-promise": {
+      "optional": true
+    },
+    "eslint-plugin-react-hooks": {
+      "optional": true
+    },
+    "eslint-plugin-react-refresh": {
       "optional": true
     },
     "eslint-plugin-regexp": {
