fix: directly use sort-package-json instead of prettier

--- a/knip.jsonc
+++ b/knip.jsonc
@@ -12,6 +12,7 @@
     "@unocss/eslint-plugin",
     "eslint-config-prettier",
     "eslint-flat-config-utils",
+    "eslint-formatting-reporter",
     "eslint-import-resolver-typescript",
     "eslint-merge-processors",
     "eslint-plugin-eslint-comments",
@@ -38,8 +39,8 @@
     "eslint-plugin-yml",
     "eslint-processor-vue-blocks",
     "jsonc-eslint-parser",
-    "prettier-plugin-packagejson",
     "prettier",
+    "sort-package-json",
     "toml-eslint-parser",
     "tsc-files",
     "vue-eslint-parser",
