--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@rebeccastevens/eslint-config",
   "version": "0.0.0-development",
   "description": "My ESLint shareable config.",
-  "keywords": ["eslint config"],
+  "keywords": [
+    "eslint config"
+  ],
   "homepage": "https://github.com/RebeccaStevens/eslint-config-rebeccastevens#readme",
   "bugs": {
     "url": "https://github.com/RebeccaStevens/eslint-config-rebeccastevens/issues"
@@ -25,7 +27,11 @@
     "require": "./dist/index.cjs",
     "import": "./dist/index.mjs"
   },
-  "files": ["dist/", "package.json", "LICENSE"],
+  "files": [
+    "dist/",
+    "package.json",
+    "LICENSE"
+  ],
   "scripts": {
     "build": "pnpm run build:node",
     "build:node": "rimraf dist && pnpm run typegen && rollup -c rollup.config.ts --configPlugin rollup-plugin-ts",
@@ -80,6 +86,7 @@
     "eslint": "9.8.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-flat-config-utils": "0.3.0",
+    "eslint-formatting-reporter": "0.0.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-merge-processors": "0.1.0",
     "eslint-plugin-eslint-comments": "3.2.0",
@@ -114,11 +121,11 @@
     "markdownlint": "0.34.0",
     "markdownlint-cli": "0.41.0",
     "prettier": "3.3.3",
-    "prettier-plugin-packagejson": "2.5.1",
     "rimraf": "6.0.1",
     "rollup": "4.20.0",
     "rollup-plugin-ts": "3.4.5",
     "semantic-release": "24.0.0",
+    "sort-package-json": "2.10.0",
     "toml-eslint-parser": "0.10.0",
     "tsc-files": "1.1.4",
     "tsx": "4.16.5",
@@ -135,6 +142,7 @@
     "eslint": "*",
     "eslint-config-prettier": "*",
     "eslint-flat-config-utils": "*",
+    "eslint-formatting-reporter": "*",
     "eslint-import-resolver-typescript": "*",
     "eslint-merge-processors": "*",
     "eslint-plugin-eslint-comments": "*",
@@ -159,7 +167,7 @@
     "eslint-processor-vue-blocks": "*",
     "jsonc-eslint-parser": "*",
     "prettier": "*",
-    "prettier-plugin-packagejson": "*",
+    "sort-package-json": "*",
     "toml-eslint-parser": "*",
     "vue-eslint-parser": "*",
     "yaml-eslint-parser": "*"
@@ -187,6 +195,9 @@
       "optional": true
     },
     "eslint-flat-config-utils": {
+      "optional": true
+    },
+    "eslint-formatting-reporter": {
       "optional": true
     },
     "eslint-import-resolver-typescript": {
@@ -270,7 +281,7 @@
     "prettier": {
       "optional": true
     },
-    "prettier-plugin-packagejson": {
+    "sort-package-json": {
       "optional": true
     },
     "toml-eslint-parser": {
