chore: knip fix up

--- a/knip.jsonc
+++ b/knip.jsonc
@@ -30,8 +30,10 @@
     "eslint-plugin-promise",
     "eslint-plugin-react-hooks",
     "eslint-plugin-react-refresh",
+    "eslint-plugin-readable-tailwind",
     "eslint-plugin-regexp",
     "eslint-plugin-sonarjs",
+    "eslint-plugin-tailwindcss",
     "eslint-plugin-toml",
     "eslint-plugin-unicorn",
     "eslint-plugin-vitest",
