fix: update to @vitest/eslint-plugin

--- a/knip.jsonc
+++ b/knip.jsonc
@@ -10,6 +10,7 @@
     "@typescript-eslint/parser",
     "@typescript-eslint/utils",
     "@unocss/eslint-plugin",
+    "@vitest/eslint-plugin",
     "eslint-config-prettier",
     "eslint-flat-config-utils",
     "eslint-formatting-reporter",
@@ -36,7 +37,6 @@
     "eslint-plugin-tailwindcss",
     "eslint-plugin-toml",
     "eslint-plugin-unicorn",
-    "eslint-plugin-vitest",
     "eslint-plugin-vue",
     "eslint-plugin-yml",
     "eslint-processor-vue-blocks",
