--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@typescript-eslint/parser": "8.8.0",
     "@typescript-eslint/utils": "8.8.0",
     "@unocss/eslint-plugin": "0.63.1",
+    "@vitest/eslint-plugin": "1.0.1",
     "commitizen": "4.3.0",
     "cspell": "8.14.4",
     "cz-conventional-changelog": "3.3.0",
@@ -110,7 +111,6 @@
     "eslint-plugin-tailwindcss": "3.17.4",
     "eslint-plugin-toml": "0.11.1",
     "eslint-plugin-unicorn": "55.0.0",
-    "eslint-plugin-vitest": "0.5.4",
     "eslint-plugin-vue": "9.27.0",
     "eslint-plugin-yml": "1.14.0",
     "eslint-processor-vue-blocks": "0.1.2",
@@ -141,6 +141,7 @@
     "@typescript-eslint/parser": "*",
     "@typescript-eslint/utils": "*",
     "@unocss/eslint-plugin": "*",
+    "@vitest/eslint-plugin": "*",
     "eslint": "*",
     "eslint-config-prettier": "*",
     "eslint-flat-config-utils": "*",
@@ -165,7 +166,6 @@
     "eslint-plugin-tailwindcss": "*",
     "eslint-plugin-toml": "*",
     "eslint-plugin-unicorn": "*",
-    "eslint-plugin-vitest": "*",
     "eslint-plugin-vue": "*",
     "eslint-plugin-yml": "*",
     "eslint-processor-vue-blocks": "*",
@@ -193,6 +193,9 @@
       "optional": true
     },
     "@unocss/eslint-plugin": {
+      "optional": true
+    },
+    "@vitest/eslint-plugin": {
       "optional": true
     },
     "eslint-config-prettier": {
@@ -271,9 +274,6 @@
       "optional": true
     },
     "eslint-plugin-unicorn": {
-      "optional": true
-    },
-    "eslint-plugin-vitest": {
       "optional": true
     },
     "eslint-plugin-vue": {
