--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "eslint-plugin-import-x": "4.3.1",
     "eslint-plugin-jsdoc": "50.3.1",
     "eslint-plugin-jsonc": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.10.0",
     "eslint-plugin-markdown": "5.1.0",
     "eslint-plugin-n": "17.10.3",
     "eslint-plugin-no-only-tests": "3.3.0",
@@ -158,6 +159,7 @@
     "eslint-plugin-import-x": "*",
     "eslint-plugin-jsdoc": "*",
     "eslint-plugin-jsonc": "*",
+    "eslint-plugin-jsx-a11y": "*",
     "eslint-plugin-markdown": "*",
     "eslint-plugin-n": "*",
     "eslint-plugin-no-only-tests": "*",
@@ -236,6 +238,9 @@
       "optional": true
     },
     "eslint-plugin-jsonc": {
+      "optional": true
+    },
+    "eslint-plugin-jsx-a11y": {
       "optional": true
     },
     "eslint-plugin-markdown": {
