--- a/.github/actions/prepare/action.yml
+++ b/.github/actions/prepare/action.yml
@@ -5,10 +5,10 @@ inputs:
   node-version:
     required: false
     description: "`node-version` passed to `actions/setup-node`."
-    default: "20"
+    default: latest
 
 runs:
-  using: composite
+  using: "composite"
   steps:
     - name: Configure Git
       run: |
@@ -19,6 +19,6 @@ runs:
     - uses: actions/setup-node@v4
       with:
         node-version: ${{ inputs.node-version }}
-        cache: pnpm
+        cache: "pnpm"
     - run: pnpm install --frozen-lockfile --ignore-scripts
       shell: bash
