--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -17,6 +17,7 @@
     "workarounds:all"
   ],
   "labels": ["Type: Maintenance", ":blue_heart:"],
+  "rebaseWhen": "behind-base-branch",
   "packageRules": [
     {
       "major": {
@@ -50,10 +51,6 @@
       "rangeStrategy": "replace",
       "semanticCommitScope": "dev-deps",
       "semanticCommitType": "ci"
-    },
-    {
-      "allowedVersions": "<5.5",
-      "matchPackageNames": ["typescript"]
     }
   ],
   "postUpdateOptions": ["pnpmDedupe"]
