--- a/.github/workflows/lint-js.yml
+++ b/.github/workflows/lint-js.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Lint Code
 
 on:
   pull_request:
@@ -6,9 +6,10 @@ on:
   workflow_call:
 
 jobs:
-  build_node:
+  lint_js:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/prepare
-      - run: pnpm run build:node
+      - run: pnpm run typegen
+      - run: pnpm run lint:js
