--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "type": "git",
     "url": "git+https://github.com/RebeccaStevens/eslint-config-rebeccastevens"
   },
+  "funding": [
+    {
+      "type": "ko-fi",
+      "url": "https://ko-fi.com/rebeccastevens"
+    }
+  ],
   "license": "BSD-3-Clause",
   "author": {
     "name": "Rebecca Stevens",
@@ -21,39 +27,44 @@
   "type": "module",
   "exports": {
     "types": {
-      "require": "./dist/index.d.cts",
-      "import": "./dist/index.d.mts"
+      "import": "./dist/index.d.ts",
+      "require": "./dist/index.d.cts"
     },
-    "require": "./dist/index.cjs",
-    "import": "./dist/index.mjs"
+    "import": "./dist/index.js",
+    "require": "./dist/index.cjs"
   },
   "files": [
     "dist/",
     "package.json",
-    "LICENSE"
+    "CHANGELOG.md",
+    "LICENSE",
+    "README.md"
   ],
   "scripts": {
-    "build": "pnpm run build:node",
-    "build:node": "rimraf dist && pnpm run typegen && rollup -c rollup.config.ts --configPlugin typescript",
+    "build": "rimraf dist && pnpm run typegen && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript --configImportAttributesKey with",
     "cz": "git-cz",
-    "lint": "pnpm run typegen && pnpm run lint:eslint && pnpm run lint:md && pnpm run lint:knip && pnpm run lint:spelling && pnpm run lint:packages",
-    "lint-fix": "pnpm run typegen && pnpm run lint:eslint-fix && pnpm run lint:packages-fix",
-    "lint:eslint": "eslint .",
-    "lint:eslint-fix": "eslint . --fix",
+    "lint": "pnpm run typegen && eslint && pnpm run lint:md && pnpm run lint:spelling && pnpm run lint:knip && pnpm run lint:packages",
+    "lint-fix": "pnpm run typegen && eslint --fix && pnpm run lint:md-fix && pnpm run lint:packages-fix",
+    "lint:js": "eslint \"**/*.?([cm])[jt]s?(x)\"",
+    "lint:js-fix": "eslint \"**/*.?([cm])[jt]s?(x)\" --fix",
     "lint:knip": "pnpm run lint:knip:development && pnpm run lint:knip:production",
-    "lint:knip:development": "knip --exclude exports,nsExports,types,nsTypes",
-    "lint:knip:production": "knip --production --strict --exclude exports,nsExports,types,nsTypes",
-    "lint:md": "markdownlint \"**/*.md\" --config=.markdownlint.json --ignore-path=.markdownlintignore",
+    "lint:knip:development": "knip",
+    "lint:knip:production": "knip --production",
+    "lint:md": "markdownlint-cli2",
+    "lint:md-fix": "markdownlint-cli2 --fix",
+    "lint:md-full": "pnpm run lint:md && eslint \"**/*.md\"",
+    "lint:md-full-fix": "pnpm run lint:md-fix && eslint \"**/*.md\" --fix",
     "lint:packages": "pnpm dedupe --check",
     "lint:packages-fix": "pnpm dedupe",
-    "lint:spelling": "cspell \"**\" \".github/**/*\"",
-    "prepare": "husky && pnpm run typegen",
+    "lint:spelling": "cspell lint --no-progress --show-suggestions --show-context --dot \"**\" \".github/**/*\"",
+    "lint:yaml": "eslint \"**/*.y?(a)ml\"",
+    "lint:yaml-fix": "eslint \"**/*.y?(a)ml\" --fix",
+    "prepare": "husky",
     "release": "semantic-release",
-    "typecheck": "pnpm run typegen && tsc --noEmit -p tsconfig.build.json",
+    "typecheck": "pnpm run typegen && pnpm run typecheck:root && pnpm run typecheck:src",
+    "typecheck:root": "tsc -p ./tsconfig.json --noEmit",
+    "typecheck:src": "tsc -p ./src/tsconfig.json --noEmit",
     "typegen": "tsx scripts/typegen.ts"
-  },
-  "resolutions": {
-    "dts-bundle-generator": "9.5.1"
   },
   "dependencies": {
     "@antfu/install-pkg": "^0.5.0",
@@ -124,13 +135,12 @@
     "jsonc-eslint-parser": "2.4.0",
     "knip": "5.41.0",
     "lint-staged": "15.2.11",
-    "markdownlint": "0.37.1",
-    "markdownlint-cli": "0.43.0",
+    "markdownlint-cli2": "0.16.0",
     "prettier": "3.4.2",
     "rimraf": "6.0.1",
     "rollup": "4.28.1",
     "rollup-plugin-deassert": "1.3.0",
-    "rollup-plugin-dts-bundle-generator": "1.4.0",
+    "rollup-plugin-dts-bundle-generator-2": "2.0.0",
     "semantic-release": "24.2.0",
     "sort-package-json": "2.12.0",
     "toml-eslint-parser": "0.10.0",
