--- a/package.json
+++ b/package.json
@@ -46,9 +46,7 @@
     "lint": "pnpm run typegen && eslint && pnpm run lint:md && pnpm run lint:spelling && pnpm run lint:knip && pnpm run lint:packages",
     "lint:js": "eslint \"**/*.?([cm])[jt]s?(x)\"",
     "lint:js-fix": "eslint \"**/*.?([cm])[jt]s?(x)\" --fix",
-    "lint:knip": "pnpm run lint:knip:development && pnpm run lint:knip:production",
-    "lint:knip:development": "knip",
-    "lint:knip:production": "knip --production",
+    "lint:knip": "knip",
     "lint:md": "markdownlint-cli2",
     "lint:md-fix": "markdownlint-cli2 --fix",
     "lint:md-full": "pnpm run lint:md && eslint \"**/*.md\"",
