--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,8 @@ concurrency:
 jobs:
   lint_js:
     uses: ./.github/workflows/lint-js.yml
-  lint_knip_dev:
-    uses: ./.github/workflows/lint-knip-dev.yml
-  lint_knip_prod:
-    uses: ./.github/workflows/lint-knip-prod.yml
+  lint_knip:
+    uses: ./.github/workflows/lint-knip.yml
   lint_markdown:
     uses: ./.github/workflows/lint-markdown.yml
   lint_packages:
@@ -37,8 +35,6 @@ jobs:
   release:
     needs:
       - lint_js
-      - lint_knip_dev
-      - lint_knip_prod
       - lint_markdown
       - lint_packages
       - lint_spelling
