chore: deps update

--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "@typescript-eslint/eslint-plugin": "8.24.1",
     "@typescript-eslint/parser": "8.24.1",
     "@typescript-eslint/utils": "8.24.1",
-    "@unocss/eslint-plugin": "65.5.0",
+    "@unocss/eslint-plugin": "66.0.0",
     "@vitest/eslint-plugin": "1.1.31",
     "commitizen": "4.3.1",
     "cspell": "8.17.3",
@@ -128,7 +128,7 @@
     "eslint-plugin-vue": "9.32.0",
     "eslint-plugin-yml": "1.17.0",
     "eslint-processor-vue-blocks": "2.0.0",
-    "eslint-typegen": "1.0.0",
+    "eslint-typegen": "2.0.0",
     "husky": "9.1.7",
     "jiti": "2.4.2",
     "jsonc-eslint-parser": "2.4.0",
@@ -145,7 +145,7 @@
     "sort-package-json": "2.14.0",
     "toml-eslint-parser": "0.10.0",
     "tsc-files": "1.1.4",
-    "tsx": "4.19.2",
+    "tsx": "4.19.3",
     "typescript": "5.7.3",
     "vue-eslint-parser": "9.4.3",
     "yaml-eslint-parser": "1.2.3"
@@ -330,5 +330,13 @@
   "packageManager": "pnpm@10.4.1",
   "engines": {
     "node": ">=20.0.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ],
+    "ignoredBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
