build: add baseline-browser-mapping as peer dep

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@typescript-eslint/utils": "8.56.0",
     "@unocss/eslint-plugin": "66.6.0",
     "@vitest/eslint-plugin": "1.6.9",
+    "baseline-browser-mapping": "2.10.0",
     "commitizen": "4.3.1",
     "cspell": "9.6.2",
     "cz-conventional-changelog": "3.3.0",
